Fix logger + hadoop properties to application.properties , remove the unused remarks , add README.txt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,9 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 app.events.source.file=data/events.json
+hadoop.home.dir=C:/Hadoop/winutils/
+country.name=USA
+game.name.suffix=-demo
+
 
 
