--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.h2.console.enabled=true
 logging.level.root=Info
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=debug
+logging.level.org.apache=WARN
 
 spring.datasource.url=jdbc:h2:mem:game_platform;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
@@ -15,8 +16,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 app.events.source.file=data/events.json
 hadoop.home.dir=C:/Hadoop/winutils/
-country.name=USA
-game.name.suffix=-demo
+
 
 
 
